fix: 🌯 allow footer nav to wrap

--- a/moku/static/css/moku.css
+++ b/moku/static/css/moku.css
@@ -393,6 +393,7 @@ footer {
 
 footer nav ul {
     display: flex;
+    flex-flow: row wrap;
     align-items: center;
     justify-content: center;
     column-gap: 1.2rem;
